--- a/templates/homepage2.html
+++ b/templates/homepage2.html
@@ -46,6 +46,31 @@
         </div>
         </div>
 
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <form method="post">
+                  <div class="form-group">
+                    <label for="message-text" class="col-form-label">Message:</label>
+                    <textarea class="form-control" name="message" id="message-text"></textarea>
+                  </div>
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Send message</button>
+              </div>
+            </div>
+            </div>
+        </div>
+
 <script>
 
     function sortTripsByDate(results) {
@@ -149,7 +174,12 @@
                 table += "<td>"+trips[i]["dateOfTrip"]+"</td>";
                 table += "<td>"+trips[i]["origin"]+"</td>";
                 table += "<td>"+trips[i]["destination"]+"</td>";
-                table += "<td>"+(passengerFirstName != undefined ? passengerFirstName + `<img src=${passengerProfileImg}>` : "No passengers yet!")+"</td>";
+                table += "<td>"+(passengerFirstName != undefined ? `<img src=${passengerProfileImg}>` 
+                               + passengerFirstName  
+                               + '  <button type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">Message</button>'
+                                 : "No passengers yet!")
+
+                    +"</td>";
         
                 table += "</tr>";
             }  
@@ -159,6 +189,16 @@
             }
 
     }
+
+    $('#exampleModal').on('show.bs.modal', function (event) {
+      var button = $(event.relatedTarget) // Button that triggered the modal
+      var recipient = button.data('whatever') // Extract info from data-* attributes
+      // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
+      // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
+      var modal = $(this)
+      modal.find('.modal-title').text('New message to ' + recipient)
+      modal.find('.modal-body input').val(recipient)
+    })
 
    function createPassengerTripTable(trips, title, elementID) {
 
