--- a/templates/search_form.html
+++ b/templates/search_form.html
@@ -20,9 +20,9 @@
 
       <div id="locationField">
         <form action="/search-rides" method=POST>
-          <input id="origin" class="query" type="text" name="origin" placeholder="Enter starting location"> 
-          <input id="destination" class="query" type="text" name="destination" placeholder="Enter destination">
-          <input id="datepicker" type="text" name="date" placeholder="date">
+          <input id="origin" class="query" type="text" name="origin" placeholder="Enter starting location" required> 
+          <input id="destination" class="query" type="text" name="destination" placeholder="Enter destination" required>
+          <input id="datepicker" type="text" name="date" placeholder="date" required>
           <input type="submit">
         </form>
       </div>
