Added functionality so user can log in from landing page. Need to fix flash messages.

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,66 +1,253 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title></title>
 
-{% block content %}
-
-<h1>Welcome! {{ user_id }} </h1>
-
-<div>
-  <h2>Your trip today:</h2>
-  {% for trip in trips %}
-    {% if trip.date_of_trip == today %}
-
-        Date: {{ trip.date_of_trip }} <br>
-        Starting: {{ trip.origin }} <br>
-        Ending: {{ trip.destination }} <br>
-        Current passengers: {{ trip.num_passengers }} <br>
-        Max passengers: {{ trip.max_passengers }} 
-
-      {% if trip.num_passengers == 0 %}
-        <form action="/update-ride" method="POST">
-          <input type="submit" value="Update ride">
-          <input type="hidden" value={{ trip.trip_id }} name="trip">
-        </form>
-      {% endif %}
-
-    {% endif %}
-  {% endfor %}
-</div>
-
-<div>
-  <h2>Upcoming trips:</h2>
-  {% for trip in trips %}
-    {% if trip.date_of_trip > today %}
-
-        Date: {{ trip.date_of_trip }} <br>
-        Starting: {{ trip.origin }} <br>
-        Ending: {{ trip.destination }} <br>
-        Current passengers: {{ trip.num_passengers }} <br>
-        Max passengers: {{ trip.max_passengers }} 
-
-      {% if trip.num_passengers == 0 %}
-        <form action="/update-ride" method="POST">
-          <input type="submit" value="Update ride">
-          <input type="hidden" value={{ trip.trip_id }} name="trip">
-        </form>
-      {% endif %}
-
-    {% endif %}
-  {% endfor %}
-</div>
-
-<div>
-  <h2> Previous trips: </h2>
-  {% for trip in trips %}
-    {% if trip.date_of_trip < today %} 
-
-      Date: {{ trip.date_of_trip }} <br>
-      Started: {{ trip.origin }} <br>
-      Ended: {{ trip.destination }} <br><br>
-
-    {% endif %}
-  {% endfor %}
-</div>
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 
+</head>
+<body>
 
-{% endblock %}
+    <div class="container-fluid">
+
+        <div>
+            <img id="profileImg" src="">
+        </div><br>
+
+        
+        <div class="container">
+        <ul class="nav nav-tabs" role="tabpanel">
+            <li class="nav-item"><a data-toggle="tab" class="nav-link" href="#home">Home</a></li>
+            <li class="nav-item"><a data-toggle="tab" class="nav-link" href="#ridesAsDriver">I'm Driving</a></li>
+            <li class="nav-item"><a data-toggle="tab" class="nav-link" href="#ridesAsPassenger">I'm Joining</a></li>
+        </ul>
+
+        <div class="tab-content">
+            <div id="home" class="tab-pane fade">
+                <br><br>
+                <p>Hello</p>
+
+            </div>
+            <div id="ridesAsDriver" class="tab-pane fade">
+                    <div id="todayTable"></div>
+                    <div id="upcomingTable"> </div>
+                    <div id="pastTable"></div>
+            </div>
+
+            <div id="ridesAsPassenger" class="tab-pane fade">
+                <div id="passengerTodayTable"></div>
+                <div id="passengerUpcomingTable"></div>
+                <div id="passengerPastTable"></div>
+            </div>
+        </div>
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Send message</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <form action="/notify" method="post" class="form-group">
+                    <input type="text" class="form-control" name="message">
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <input type="submit" class="btn btn-primary" value="Message">
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+    <script>
+
+    function sortTripsByDate(results) {
+     
+        const { trips, tripsAsPassenger } = results;
+
+        let todaysDate = new Date()
+        let todaysDateUTC = Date.UTC(todaysDate.getUTCFullYear(),
+                                     todaysDate.getUTCMonth(),
+                                     todaysDate.getUTCDate())
+       
+        let upcomingTrips = new Array();
+        let pastTrips = new Array();
+        let todaysTrips = new Array();
+
+        let passengerUpcomingTrips = new Array();
+        let passengerPastTrips = new Array();
+        let passengerTodaysTrips = new Array();
+
+        for (let i = 0; i < trips.length; i++) {
+            
+            date = new Date(trips[i]["dateOfTrip"]);
+            utc_date = Date.UTC(date.getUTCFullYear(),
+                                date.getUTCMonth(),
+                                date.getUTCDate());
+    
+
+            if (utc_date == todaysDateUTC) {
+                todaysTrips.push(trips[i]);
+            } else if (utc_date > todaysDateUTC) {
+                upcomingTrips.push(trips[i]);
+            } else if (utc_date < todaysDateUTC) {
+                pastTrips.push(trips[i]);
+            }
+        }
+
+        for (let i = 0; i < tripsAsPassenger.length; i++) {
+            
+            date = new Date(tripsAsPassenger[i]["dateOfTrip"]);
+            utc_date = Date.UTC(date.getUTCFullYear(),
+                                date.getUTCMonth(),
+                                date.getUTCDate());
+    
+
+            if (utc_date == todaysDateUTC) {
+                passengerTodaysTrips.push(tripsAsPassenger[i]);
+            } else if (utc_date > todaysDateUTC) {
+                passengerUpcomingTrips.push(tripsAsPassenger[i]);
+            } else if (utc_date < todaysDateUTC) {
+                passengerPastTrips.push(tripsAsPassenger[i]);
+            }
+        }
+
+        createTripTable(todaysTrips, "Today\'s Trip", 'todayTable');
+        createTripTable(upcomingTrips, 'Upcoming Trips', 'upcomingTable');
+        createTripTable(pastTrips, 'Past trips', 'pastTable');
+
+        createPassengerTripTable(passengerTodaysTrips, "Today\'s' Trips", 'passengerUpcomingTable')
+        createPassengerTripTable(passengerUpcomingTrips, 'Upccoming Trips', 'passengerUpcomingTable')
+        createPassengerTripTable(passengerPastTrips, 'Past Trips', 'passengerPastTable')
+    }
+
+    function getTrips() {
+        $.get('/trips.json', sortTripsByDate);
+    }
+
+    getTrips();
+
+    function createTripTable(trips, title, elementID) {
+
+        if (trips.length === 0) {
+            return null;
+        } else {
+            let table = "<table class='table'>";
+            table += `<h3>${title}</h3>`;
+            table += "<thead>";
+            table += "<tr>";
+            table += "<th scope='col'>Date:</th>";
+            table += "<th scope='col'>From:</th>";
+            table += "<th scope='col'>To:</th>";
+            table += "<th scope='col'>Passengers:</th>";
+            table += "</tr>";
+            table += "</thead>";
+
+            
+            for (let i = trips.length-1; i >= 0; i--) {
+
+                let passengerFirstName;
+                let passengerProfileImg;
+
+                passengerList = trips[i]["passengers"];
+
+                // Map (like list comprehension)
+                for (let j = 0; j < passengerList.length; j++) {
+                    passengerFirstName = passengerList[j]["userFirstName"];
+                    passengerProfileImg = passengerList[j]["userProfileImg"];
+                }
+                
+                table += "<tbody>";
+                table += "<tr>";
+                table += "<td>" + trips[i]["dateOfTrip"]+"</td>";
+                table += "<td>" + trips[i]["origin"]+"</td>";
+                table += "<td>" + trips[i]["destination"]+"</td>";
+                table += "<td>" + (passengerFirstName != undefined ? `<img 
+                                  src=${passengerProfileImg}>`
+                                +  '&nbsp; &nbsp;'
+                                +  passengerFirstName
+                                +  '&nbsp; &nbsp;'
+                                +  '<button type="button" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalCenter">Message</button>'
+                               : "No passengers yet!");
+                                 + "</td>";
+        
+                table += "</tr>";
+            }  
+            table += "</tbody>"
+            table += "</table>";
+            document.getElementById(elementID).innerHTML = table;
+            }
+
+    }
+
+
+   function createPassengerTripTable(trips, title, elementID) {
+
+        if (trips.length === 0) {
+            return null;
+        } else {
+            let table = "<table class='table table-dark'>";
+            table += `<h3>${title}</h3>`;
+            table += "<th>Date:</th>";
+            table += "<th>From:</th>";
+            table += "<th>To:</th>";
+            table += "<th>Driver:</th>";
+
+            
+            for (let i = trips.length-1; i >= 0; i--) {
+
+                let userProfileImg = trips[i]["userProfileImg"];
+
+                table += "<tr>";
+                table += "<td>" + trips[i]["dateOfTrip"]+"</td>";
+                table += "<td>" + trips[i]["origin"]+"</td>";
+                table += "<td>" + trips[i]["destination"]+"</td>";
+                table += "<td>" + `<img src="${userProfileImg}">`
+                                + '&nbsp; &nbsp;'
+                                + trips[i]["userFirstName"]
+                                + '&nbsp; &nbsp;'
+                                + '<button type="button" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalCenter">Message</button>';
+                                + "</td>";
+        
+                table += "</tr>";
+            }  
+
+            table += "</table>";
+            document.getElementById(elementID).innerHTML = table;
+            }
+
+    }
+
+    function displayUserInfo(results) {
+        let img = results["user_info"]["user_profile_img"];
+        document.getElementById("profileImg").src = img;
+    }
+    
+
+    function getUserInfo() {
+            $.get('/user-info.json', displayUserInfo);
+        }
+
+    getUserInfo();
+
+
+
+</script>
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+</body>
+</html>
