--- a/templates/index.html
+++ b/templates/index.html
@@ -21,8 +21,9 @@
 
 <div class="container">
 
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Raite</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -35,30 +36,22 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
         </ul>
         <form class="form-inline my-2 my-lg-0" action="/login" method="post">
-          <input class="form-control mr-sm-2" type="text" placeholder="Email" name="email">
-          <input class="form-control mr-sm-2" type="password" placeholder="Password" name="password">
-          <input type="submit" class="btn btn-outline-success my-2 my-sm-0" value="Log In">
+          <input class="form-control mr-sm-2 col-form-label-sm" type="text" placeholder="Email" name="email">
+          <input class="form-control mr-sm-2 col-form-label-sm" type="password" placeholder="Password" name="password">
+          <input type="submit" class="btn btn-outline-success my-2 my-sm-0 btn-sm" value="Log In">
         </form>
       </div>
     </nav>
 
     <br>
+    {% with messages = get_flashed_messages() %}
+        {% for message in messages %}
+            <div>{{ message }}</div>
+            <br>
+        {% endfor %}
+    {% endwith %}
 
     <div class="row">
         <div class="col-8">
@@ -67,14 +60,13 @@
               <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
               <hr class="my-4">
               <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-              <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-              </p>
             </div>               
         </div>
 
         <div class="col-4">
+            <br>
             <form>
+                <h2>Register</h2>
               <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
