Cleaned up code in server.py, seed.py, and model.py

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -29,7 +29,7 @@
             {% endfor %}
         {% endwith %}
 
-        <br><h2>Welcome!</h2>
+        <h2>Welcome!</h2>
 
         <ul class="nav nav-tabs" role="tabpanel">
             <li class="nav-item"><a data-toggle="tab" class="nav-link" href="#home">Home</a></li>
