--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,6 +9,9 @@
     crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+
+
 
 </head>
 <body>
@@ -41,6 +44,8 @@
             <div id="home" class="tab-pane fade">
                 <br><br>
                 <p>Hello</p>
+
+                <canvas id="myChart"></canvas>
 
             </div>
             <div id="ridesAsDriver" class="tab-pane fade">
@@ -91,13 +96,13 @@
                                      todaysDate.getUTCMonth(),
                                      todaysDate.getUTCDate())
        
-        let upcomingTrips = new Array();
-        let pastTrips = new Array();
-        let todaysTrips = new Array();
+        let upcomingTrips = [];
+        let pastTrips = [];
+        let todaysTrips = [];
 
-        let passengerUpcomingTrips = new Array();
-        let passengerPastTrips = new Array();
-        let passengerTodaysTrips = new Array();
+        let passengerUpcomingTrips = [];
+        let passengerPastTrips = [];
+        let passengerTodaysTrips = [];
 
         for (let i = 0; i < trips.length; i++) {
             
@@ -140,6 +145,8 @@
         createPassengerTripTable(passengerTodaysTrips, "Today\'s' Trips", 'passengerUpcomingTable')
         createPassengerTripTable(passengerUpcomingTrips, 'Upccoming Trips', 'passengerUpcomingTable')
         createPassengerTripTable(passengerPastTrips, 'Past Trips', 'passengerPastTable')
+
+        organizeData(trips)
     }
 
     function getTrips() {
@@ -251,6 +258,43 @@
 
     getUserInfo();
 
+    // ChartJS
+    function organizeData(trips) {
+        let origins = [];
+        let destinations = [];
+
+        let destinationsObj = {};
+
+        for (let i = 0; i < trips.length; i++) {
+            destination = trips[i]['destination']
+
+            if (!(destination in destinationsObj)) {
+                destinationsObj[destination] = 1;
+            } else {
+                destinationsObj[destination] += 1;
+            } 
+        }
+
+        console.log(destinationsObj)
+
+        let ctx = document.getElementById("myChart").getContext("2d")
+
+        data = {
+            datasets: [{
+                data: [10, 20, 80]
+            }],
+
+            // These labels appear in the legend and in the tooltips when hovering different arcs
+            labels: [
+            ]
+        };
+
+        let myDoughnutChart = new Chart(ctx, {
+            type: 'doughnut',
+            data: data,
+            options: {}
+        });
+    }
 
 
 </script>
@@ -259,5 +303,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 </body>
 </html>
