--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,6 @@
 
 <div class="container">
 
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Raite</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,9 +56,9 @@
         <div class="col-8">
             <div class="jumbotron">
               <h1 class="display-4">Hello, world!</h1>
-              <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+              <p class="lead">Go somewhere new or visit loved ones with Raite.</p>
               <hr class="my-4">
-              <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+              <p>Ridesharing from city to city in the U.S.</p>
             </div>               
         </div>
 
