--- a/templates/nearby_search_results.html
+++ b/templates/nearby_search_results.html
@@ -5,18 +5,17 @@
   <h2>Sorry! There aren't rides to {{ destination }} on {{ date_desired }}, but here are some rides nearby: </h2>
 
   <div>
-      {% for drop_off in drop_offs_nearby %}
+      {% for trip_id, trip in drop_offs_nearby.items() %}
 
-        City: {{ drop_off }} <br>
-        Date: {{ drop_offs_nearby[drop_off]['date'] }} <br>
-        Distance to {{ destination }}: {{ drop_offs_nearby[drop_off]['distance'] }} <br>
-        Driver: {{ drop_offs_nearby[drop_off]['trip_info'].user.fname }} <br>
+        City: {{ trip.destination }} <br>
+        Date: {{ trip.date_of_trip }} <br>
+        Driver: {{ trip.user.fname }} <br>
 
-        <img src={{ drop_offs_nearby[drop_off]['trip_info'].user.user_profile_img }}>
+        <img src={{ trip.user.user_profile_img }}>
 
         <form action="/join-ride" method="POST">
           <input type="submit" value="Join ride!">
-          <input type="hidden" value={{ drop_offs_nearby[drop_off]['trip_id'] }} name="trip">
+          <input type="hidden" value={{ trip.trip_id }} name="trip">
         </form>
         <br>
 
